SHOP-59: Allow other user to see other users presets if they are set on shared list + fix drag&drop on mobile + slice title if it's too long on mobile devices

--- a/shopper-web/src/app/components/list/list.component.css
+++ b/shopper-web/src/app/components/list/list.component.css
@@ -53,6 +53,7 @@
 ::ng-deep .mat-progress-bar-fill::after {
     background-color: #00c500;
 }
+
 .mat-progress-bar-fill::after {
     background-color: #00c500 !important;
 }
@@ -60,7 +61,14 @@
 .mat-input-element {
     caret-color: white !important;
 }
-.category-preset{
+
+.category-preset {
     font-size: initial;
     font-weight: normal;
+}
+
+.list-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
